--- a/glide.yaml
+++ b/glide.yaml
@@ -8,3 +8,7 @@ import:
 - package: gopkg.in/yaml.v2
 - package: github.com/urfave/cli
   version: ^1.19.1
+- package: github.com/sirupsen/logrus
+  version: ^1.0.1
+- package: gopkg.in/natefinch/lumberjack.v2
+  version: ^2.1.0
